--- a/etmain/locale/client/pl.po
+++ b/etmain/locale/client/pl.po
@@ -1,3 +1,7 @@
+# Polish translation for ET:Legacy client
+# Copyright (C) 2012-2015 ET: Legacy Team
+# This file is distributed under the same license as the ET:Legacy package.
+
 #: src/client/cl_console.c:674
 msgid "say_team:"
 msgstr ""
@@ -15,11 +19,11 @@ msgstr ""
 msgid "%s (UPDATE AVAILABLE)"
 msgstr "%s (AKTUALIZACJA DOSTEPNA)"
 
-# Copyright (C) YEAR Jan Simek
-# This file is distributed under the same license as the PACKAGE package.
-#
 #~ msgid "MOUSE1"
 #~ msgstr "MYSZ1"
 
 #~ msgid "MOUSE2"
 #~ msgstr "MYSZ2"
+
+#~ msgid "SPACE"
+#~ msgstr ""
