--- a/etmain/locale/client/ru.po
+++ b/etmain/locale/client/ru.po
@@ -1,11 +1,10 @@
-# Russian translation for ET:Legacy client.
-# Copyright (C) 2014 Artem Vorotnikov
+# Russian translation for ET:Legacy client
+# Copyright (C) 2012-2015 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
-# Artem Vorotnikov <artem@vorotnikov.me>, 2014.
-#
+
 msgid ""
 msgstr ""
-"Project-Id-Version: ET: Legacy 2.71rc4\n"
+"Project-Id-Version: ET: Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
 "PO-Revision-Date: 2014-12-02 04:03+0300\n"
@@ -19,19 +18,15 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: src/client/cl_console.c:674
 msgid "say_team:"
 msgstr ""
 
-#: src/client/cl_console.c:682
 msgid "say_fireteam:"
 msgstr ""
 
-#: src/client/cl_console.c:690
 msgid "say:"
 msgstr ""
 
-#: src/client/cl_console.c:803
 #, c-format
 msgid "%s (UPDATE AVAILABLE)"
 msgstr "%s (ДОСТУПНО ОБНОВЛЕНИЕ)"
@@ -41,3 +36,6 @@ msgstr "%s (ДОСТУПНО ОБНОВЛЕНИЕ)"
 
 #~ msgid "MOUSE2"
 #~ msgstr "МЫШЬ2"
+
+#~ msgid "SPACE"
+#~ msgstr ""
