--- a/etmain/locale/mod/de.po
+++ b/etmain/locale/mod/de.po
@@ -1,7 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Jan Simek
-# This file is distributed under the same license as the PACKAGE package.
-# 
+# German translation for ET:Legacy mod
+# Copyright (C) 2012-2015 ET: Legacy Team
+# This file is distributed under the same license as the ET:Legacy package.
+
 # Translators:
 # IR4 <gutzu@gmx.ch>, 2015
 # Joshua <git@sky-e.de>, 2015
