--- a/etmain/locale/mod/fr.po
+++ b/etmain/locale/mod/fr.po
@@ -1,7 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Jan Simek
-# This file is distributed under the same license as the PACKAGE package.
-# 
+# French translation for ET:Legacy mod
+# Copyright (C) 2012-2015 ET: Legacy Team
+# This file is distributed under the same license as the ET:Legacy package.
+
 # Translators:
 # Aranud <aranud66@live.fr>, 2015
 # Calinou, 2015
