--- a/etmain/locale/mod/ru.po
+++ b/etmain/locale/mod/ru.po
@@ -1,7 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Jan Simek
-# This file is distributed under the same license as the PACKAGE package.
-# 
+# Russian translation for ET:Legacy mod
+# Copyright (C) 2012-2015 ET: Legacy Team
+# This file is distributed under the same license as the ET:Legacy package.
+
 # Translators:
 # Artem Vorotnikov <artem@vorotnikov.me>, 2014-2015
 msgid ""
