misc: removed issue causing freezes during opening console, applying fix for rest of translation

--- a/etmain/locale/client/cs.po
+++ b/etmain/locale/client/cs.po
@@ -15,11 +15,11 @@ msgstr ""
 msgid "%s (UPDATE AVAILABLE)"
 msgstr ""
 
-#~ msgid "MOUSE1"
-#~ msgstr ""
+msgid "MOUSE1"
+msgstr ""
 
-#~ msgid "MOUSE2"
-#~ msgstr ""
+msgid "MOUSE2"
+msgstr ""
 
-#~ msgid "SPACE"
-#~ msgstr ""
+msgid "SPACE"
+msgstr ""
