misc: fixed linux man pages, fixes #897

--- a/docs/linux/man/man6/etl.6
+++ b/docs/linux/man/man6/etl.6
@@ -1,9 +1,9 @@
-.TH etl 1 "9 January 2013" "" "ET: Legacy client and listen server man page"
+.TH etl 6 "9 January 2013" "" "ET: Legacy client and listen server man page"
 
 .SH NAME
-etl \- ET: Legacy client and listen server 
+etl \- ET: Legacy client and listen server
 
-..SH SYNOPSIS
+.SH SYNOPSIS
 .B etl
 .RI [ options ]
 .br
@@ -26,7 +26,7 @@ For any issues visit http://www.etlegacy.com or mail to mail@etlegacy.com
 
 .SH "SEE ALSO"
 
-etlded - The dedicated server of ET: Legacy 
+etlded - The dedicated server of ET: Legacy
 
 .SH BUGS
 
@@ -38,4 +38,4 @@ ET: Legacy Team
 
 .SH COPYRIGHT
 
-ET: Legacy is distributed under the GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007 
+ET: Legacy is distributed under the GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
