--- a/docs/linux/man/man6/etlded.6
+++ b/docs/linux/man/man6/etlded.6
@@ -1,9 +1,9 @@
-.TH etlded 1 "9 January 2013" "" "ET: Legacy server man page"
+.TH etlded 6 "9 January 2013" "" "ET: Legacy server man page"
 
 .SH NAME
-etlded \- ET: Legacy dedicated server 
+etlded \- ET: Legacy dedicated server
 
-..SH SYNOPSIS
+.SH SYNOPSIS
 .B etlded
 .RI [ options ]
 .br
@@ -26,7 +26,7 @@ For any issues visit http://www.etlegacy.com or mail to mail@etlegacy.com
 
 .SH "SEE ALSO"
 
-etl - The client and listen server of ET: Legacy 
+etl - The client and listen server of ET: Legacy
 
 .SH BUGS
 
@@ -38,4 +38,4 @@ ET: Legacy Team
 
 .SH COPYRIGHT
 
-ET: Legacy is distributed under the GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007 
+ET: Legacy is distributed under the GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
