misc: small update for etlegacy_mod.pot

--- a/etmain/locale/etlegacy_mod.pot
+++ b/etmain/locale/etlegacy_mod.pot
@@ -7023,3 +7023,24 @@ msgstr ""
 
 msgid "NO XP SHUFFLE"
 msgstr ""
+
+msgid "Multiview:"
+msgstr ""
+
+msgid "Poll:"
+msgstr ""
+
+msgid "Allow players to vote for custom votes"
+msgstr ""
+
+msgid "Log File:"
+msgstr ""
+
+msgid "Sets the name of the log file or if empty logging is disabled"
+msgstr ""
+
+msgid "^7BACKSPACE ^3help on/off"
+msgstr ""
+
+msgid "^7BACKSPACE ^mgo  back"
+msgstr ""
