--- a/etmain/locale/etlegacy_mod.pot
+++ b/etmain/locale/etlegacy_mod.pot
@@ -7094,3 +7094,15 @@ msgstr ""
 
 msgid "Set your desired renderer (does a video restart)"
 msgstr ""
+
+msgid "Custom Width:"
+msgstr ""
+
+msgid "Specifies custom resolution width - requires custom resolution set. *Use on your own risk!"
+msgstr ""
+
+msgid "Custom Height:"
+msgstr ""
+
+msgid "Specifies custom resolution height - requires custom resolution set .*Use on your own risk!"
+msgstr ""
