Revert "misc: update etlegacy_mod.pot"
This reverts commit 37c6c7eb73ddf44442a2120546914b81b792a379.

--- a/etmain/locale/etlegacy_mod.pot
+++ b/etmain/locale/etlegacy_mod.pot
@@ -7089,6 +7089,9 @@ msgstr ""
 msgid "You are frozen - ^3/kill^7 is disabled."
 msgstr ""
 
+msgid "Renderer:"
+msgstr ""
+
 msgid "Set your desired renderer (does a video restart)"
 msgstr ""
 
