--- a/etmain/locale/etlegacy_mod.pot
+++ b/etmain/locale/etlegacy_mod.pot
@@ -7102,8 +7102,35 @@ msgstr ""
 msgid "Specifies custom resolution height - requires custom resolution set .*Use on your own risk!"
 msgstr ""
 
-msgid "Frames Limit:"
+msgid "Max. Frames Per Second:"
 msgstr ""
 
-msgid "Set limit for frames"
+msgid "Sets the limit of frames per second - keep the values between 20 and 333"
+msgstr ""
+
+msgid "JOYSTICK"
+msgstr ""
+
+msgid "Enable Joysticks:"
+msgstr ""
+
+msgid "General joystick initialization. Requires vid_restart."
+msgstr ""
+
+msgid "Use Joystick#:"
+msgstr ""
+
+msgid "Specifies active joystick"
+msgstr ""
+
+msgid "Analog Joystick:"
+msgstr ""
+
+msgid "Use analog joystick?"
+msgstr ""
+
+msgid "Joystick Threshold:"
+msgstr ""
+
+msgid "Sets joystick threshold sensitivity"
 msgstr ""
