--- a/etmain/locale/client/hu.po
+++ b/etmain/locale/client/hu.po
@@ -2,42 +2,43 @@
 # Copyright (C) 2012-2015 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
 # Translators:
+# Bálint Tóth-Lukács <hatcher.tb@gmail.com>, 2018
 msgid ""
 msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2015-01-10 11:49+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Korean (Korea) (http://www.transifex.com/etlegacy/etlegacy/language/ko_KR/)\n"
+"PO-Revision-Date: 2018-02-23 17:19+0000\n"
+"Last-Translator: rafal1137 <rafal1137@yahoo.pl>\n"
+"Language-Team: Hungarian (http://www.transifex.com/etlegacy/etlegacy/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ko_KR\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: hu\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/client/cl_console.c:674
 msgid "say_team:"
-msgstr ""
+msgstr "say_team:"
 
 #: src/client/cl_console.c:682
 msgid "say_fireteam:"
-msgstr ""
+msgstr "say_fireteam:"
 
 #: src/client/cl_console.c:690
 msgid "say:"
-msgstr ""
+msgstr "say:"
 
 #: src/client/cl_console.c:803
 #, c-format
 msgid "%s (UPDATE AVAILABLE)"
-msgstr ""
+msgstr "%s (FRISSÍTÉS ELÉRHETŐ)"
 
 msgid "MOUSE1"
-msgstr ""
+msgstr "MOUSE1"
 
 msgid "MOUSE2"
-msgstr ""
+msgstr "MOUSE2"
 
 msgid "SPACE"
-msgstr ""
+msgstr "SPACE"
