--- a/etmain/locale/mod/el.po
+++ b/etmain/locale/mod/el.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the ET:Legacy package.
 # Translators:
 # Devils Right Hand, 2016
+# Devils Right Hand, 2017
 # Devils Right Hand, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2017-04-05 15:25+0000\n"
-"Last-Translator: rafal1137 <rafal1137@yahoo.pl>\n"
+"PO-Revision-Date: 2018-02-24 15:08+0000\n"
+"Last-Translator: Artem Vorotnikov <artem@vorotnikov.me>\n"
 "Language-Team: Greek (http://www.transifex.com/etlegacy/etlegacy/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1262,13 +1263,17 @@ msgstr "ΜΕΝΟΎ"
 msgid "VOTE"
 msgstr "ΨΉΦΟΣ"
 
-#: etmain/ui/ingame_main.menu:39 etmain/ui/ingame_vote.menu:53
+#: etmain/ui/ingame_main.menu:38 etmain/ui/ingame_vote.menu:53
 msgid "REFEREE"
 msgstr "ΔΙΑΙΤΗΤΉΣ"
 
-#: etmain/ui/ingame_main.menu:40 etmain/ui/ingame_vote.menu:71
+#: etmain/ui/ingame_main.menu:39 etmain/ui/ingame_vote.menu:71
 msgid "RCON"
 msgstr "επανασύνδεση"
+
+#: etmain/ui/ingame_main.menu:40
+msgid "LIMBO MENU"
+msgstr ""
 
 #: etmain/ui/ingame_main.menu:41 etmain/ui/ingame_serverinfo.menu:52
 #: etmain/ui/playonline.menu:650 etmain/ui/playonline_serverinfo.menu:52
@@ -4588,7 +4593,7 @@ msgstr "Δευτερόλεπτα για να ΕΠΟΜΕΝΗ ΧΑΡΤΗΣ"
 
 #: src/cgame/cg_debriefing.c:2905
 msgid "SEC TO NEXT MAP"
-msgstr ""
+msgstr "Δευτερόλεπτα για το ΕΠΟΜΕΝΟ ΧΑΡΤΗΣ"
 
 #: src/cgame/cg_debriefing.c:3371
 #, c-format
@@ -5230,7 +5235,7 @@ msgstr "σκοτώνει: %3d  ομάδα σκοτώνει: %3d Ακρίβεια
 #: src/cgame/cg_servercmds.c:1941
 #, c-format
 msgid "Gibs:   %3d    Team Gibs:  %3d"
-msgstr ""
+msgstr "Gibs: %3dΟμάδα Gibs: %3d"
 
 #: src/cgame/cg_servercmds.c:1879
 #, c-format
@@ -5592,7 +5597,7 @@ msgid "You must be a player or following a player to use +stats\n"
 msgstr "Πρέπει να είστε παίκτη ή μετά από έναν παίκτη να χρησιμοποιεί στατιστικά\n\n"
 
 msgid "You must be alive to use ^3/kill^7."
-msgstr ""
+msgstr "Εσείς πρέπει να είστε ζωντανά να χρησιμοποιήσετε ^3/kill^7."
 
 msgid "No vote in progress.\n"
 msgstr "Χωρίς ψήφο σε εξέλιξη.\n\n"
@@ -5885,7 +5890,7 @@ msgid "Arming landmine..."
 msgstr "Οπλισμός νάρκη ..."
 
 msgid "Landmine armed"
-msgstr ""
+msgstr "Ναρκών ένοπλες"
 
 msgid "Dynamite is set, but NOT armed!"
 msgstr "Δυναμίτη έχει οριστεί, αλλά ΟΧΙ οπλισμένος!"
@@ -5897,10 +5902,10 @@ msgid "Dynamite is now armed with a 30 second timer!"
 msgstr "Dynamite είναι τώρα οπλισμένοι με ένα δεύτερο χρονοδιακόπτη 30!"
 
 msgid "Defusing landmine..."
-msgstr ""
+msgstr "Εξουδετέρωση Ναρκών..."
 
 msgid "Landmine defused"
-msgstr ""
+msgstr "Ναρκών εκτονώθηκε"
 
 msgid "Defusing dynamite..."
 msgstr "Εκτόνωση δυναμίτη ..."
@@ -6011,7 +6016,7 @@ msgid "Public Settings Loaded!\n"
 msgstr "Δημόσια Ρυθμίσεις Φορτωμένος!\n\n"
 
 msgid "Landmine cannot be armed here"
-msgstr ""
+msgstr "Ναρκών ξηράς δεν μπορεί να οπλιστεί εδώ"
 
 msgid "Your team has too many landmines placed..."
 msgstr "Η ομάδα σας έχει πάρα πολλές νάρκες τοποθετήθηκαν ..."
@@ -6320,7 +6325,7 @@ msgid "'s KA-BAR"
 msgstr "'S KA-BAR"
 
 msgid "'s knife arts"
-msgstr ""
+msgstr "'s μαχαίρια τέχνες"
 
 msgid "'s .45ACP 1911"
 msgstr "'s .45ACP 1911"
@@ -6482,7 +6487,7 @@ msgid "was stabbed by"
 msgstr "μαχαιρώθηκε από"
 
 msgid "was backstabbed by"
-msgstr ""
+msgstr "μαχαιρώθηκε από"
 
 msgid "was blasted by"
 msgstr "ήταν καταραμένος από"
@@ -6861,19 +6866,19 @@ msgid "Welcome Newbie! Award"
 msgstr "Καλώς  Αρχάριος! Βραβείο"
 
 msgid "Highest Headshots Percentage"
-msgstr ""
+msgstr "ύψιστος βολή στο κεφάλι ποσοστό"
 
 msgid "Best Survivor"
-msgstr ""
+msgstr "Καλύτερος επιζών"
 
 msgid "Most Gibs"
-msgstr ""
+msgstr "περισσότερα Gibs"
 
 msgid "Most Selfkills"
-msgstr ""
+msgstr "περισσότερα αυτοκτονία"
 
 msgid "Most Deaths"
-msgstr ""
+msgstr "περισσότερα Θάνατοι"
 
 msgid ""
 "\n"
@@ -6884,7 +6889,7 @@ msgid "Gib command not allowed during intermission.\n"
 msgstr "Εντολή Gib δεν επιτρέπεται κατά τη διάρκεια του διαλείμματος.\n\n"
 
 msgid "^3%d^7 players gibbed."
-msgstr ""
+msgstr "^3%d^7 παίκτες gibbed."
 
 msgid "There is no player to gib."
 msgstr "Δεν υπάρχει κανένας παίκτης να GiB."
@@ -6902,7 +6907,7 @@ msgid "Die command not allowed during intermission.\n"
 msgstr "Καλούπι εντολή δεν επιτρέπεται κατά τη διάρκεια του διαλείμματος.\n\n"
 
 msgid "^3%d^7 players died."
-msgstr ""
+msgstr "^3%d^7 παίκτες έχασαν τη ζωή τους."
 
 msgid "There is no player to die.\n"
 msgstr "Δεν υπάρχει κανένας παίκτης να πεθάνει.\n\n"
@@ -6920,7 +6925,7 @@ msgid "Freeze command not allowed during intermission.\n"
 msgstr "Πάγωμα εντολή δεν επιτρέπεται κατά τη διάρκεια του διαλείμματος.\n\n"
 
 msgid "^3%d^7 players are frozen."
-msgstr ""
+msgstr "^3%d^7 παίκτες είναι παγωμένα."
 
 msgid "No players in team or they are already frozen.\n"
 msgstr "Δεν υπάρχουν παίκτες στην ομάδα ή έχουν ήδη παγώσει.\n\n"
@@ -6935,7 +6940,7 @@ msgid "^7%s^7 is frozen."
 msgstr "^7%s^7 Είναι παγωμένο"
 
 msgid "^3%d^7 players are unfrozen."
-msgstr ""
+msgstr "^3%d^7 παίκτες δεν είναι παγωμένα."
 
 msgid "No players in team or they are already unfrozen.\n"
 msgstr "Δεν υπάρχουν παίκτες στην ομάδα ή είναι ήδη παγωμένα.\n\n"
@@ -6953,7 +6958,7 @@ msgid "Burn command not allowed during intermission.\n"
 msgstr "Κάψτε εντολή δεν επιτρέπεται κατά τη διάρκεια του διαλείμματος.\n\n"
 
 msgid "^3%d^7 players burned."
-msgstr ""
+msgstr "^3%d^7 παίκτες που καίγονται."
 
 msgid "No players in team or they are already burned.\n"
 msgstr "Δεν υπάρχουν παίκτες στην ομάδα ή έχουν ήδη καεί.\n\n"
@@ -6971,7 +6976,7 @@ msgid "Pip command not allowed during intermission.\n"
 msgstr "Pip εντολή δεν επιτρέπεται κατά τη διάρκεια του διαλείμματος.\n\n"
 
 msgid "^3%d^7 players pipped."
-msgstr ""
+msgstr "^3%d^7 παίκτες pipped."
 
 msgid "No players in team or they are already pipped.\n"
 msgstr "Δεν υπάρχουν παίκτες στην ομάδα ή είναι ήδη pipped.\n\n"
@@ -6989,7 +6994,7 @@ msgid "%s command not allowed during intermission.\n"
 msgstr "%s  Δεν εντολή που επιτρέπεται κατά τη διάρκεια του διαλείμματος.\n\n"
 
 msgid "^3%d^7 players %s."
-msgstr ""
+msgstr "^3%d^7 παίκτες %s."
 
 msgid "No players in team or they are already %s.\n"
 msgstr "Δεν υπάρχουν παίκτες στην ομάδα ή είναι ήδη%s.\n\n"
@@ -7094,174 +7099,288 @@ msgid "^7BACKSPACE ^mgo  back"
 msgstr "^7BACKSPACE ^mπάω πίσω"
 
 msgid "CURRENT PROFILE"
-msgstr ""
+msgstr "κυκλοφορών προφίλ"
 
 #: src/cgame/cg_draw.c:1504
 msgid "%s^7's dynamite"
-msgstr ""
+msgstr "%s^7's δυναμίτη"
 
 #: src/cgame/cg_draw.c:1516
 msgid "%s^7's mine"
-msgstr ""
+msgstr "%s^7's Νάρκες"
 
 msgid "You are frozen - ^3/kill^7 is disabled."
-msgstr ""
+msgstr "Είστε παγωμένοι - ^3/σκοτώνω^7 είναι απενεργοποιημένο."
 
 msgid "Renderer:"
-msgstr ""
+msgstr "Καθιστών"
 
 msgid "Set your desired renderer (does a video restart)"
-msgstr ""
+msgstr "Ορίστε την επιθυμητή απόδοση (Κάνει μια επανεκκίνηση του βίντεο)"
 
 msgid "Custom Width:"
-msgstr ""
+msgstr "Προσαρμοσμένο πλάτος"
 
 msgid ""
 "Specifies custom resolution width - requires custom resolution set. *Use on "
 "your own risk!"
-msgstr ""
+msgstr "Καθορίζει πλάτος προσαρμοσμένης ανάλυσης - Απαιτεί προσαρμοσμένη ρύθμιση ανάλυσης.*Χρησιμοποιήστε με δική σας ευθύνη"
 
 msgid "Custom Height:"
-msgstr ""
+msgstr "Προσαρμοσμένο ύψος:"
 
 msgid ""
 "Specifies custom resolution height - requires custom resolution set .*Use on"
 " your own risk!"
-msgstr ""
+msgstr "Καθορίζει προσαρμοσμένο ύψος ανάλυσης - Απαιτεί προσαρμοσμένη ρύθμιση ανάλυσης.*Χρησιμοποιήστε με δική σας ευθύνη"
 
 msgid "Max. Frames Per Second:"
-msgstr ""
+msgstr "ανώτατο όριο. καρέ ανά δευτερόλεπτο"
 
 msgid ""
 "Sets the limit of frames per second - keep the values between 20 and 333"
-msgstr ""
+msgstr "Ορίζει το όριο των καρέ ανά δευτερόλεπτο - Διατηρήστε τις τιμές μεταξύ 20 και 333"
 
 msgid "JOYSTICK"
-msgstr ""
+msgstr "χειριστήριο"
 
 msgid "Enable Joysticks:"
-msgstr ""
+msgstr "επιτρέπω χειριστήριο"
 
 msgid "General joystick initialization. Requires vid_restart."
-msgstr ""
+msgstr "Γενικός χειριστήριο Αρχικοποίηση.Απαιτεί βίντεο_επανεκκίνηση."
 
 msgid "Use Joystick#:"
-msgstr ""
+msgstr "χρησιμοποιώ χειριστήριο#:"
 
 msgid "Specifies active joystick"
-msgstr ""
+msgstr "Καθορίζει Ενεργό χειριστήριο"
 
 msgid "Analog Joystick:"
-msgstr ""
+msgstr "αναλογικό χειριστήριο"
 
 msgid "Use analog joystick?"
-msgstr ""
+msgstr "χρησιμοποιώ αναλογικό χειριστήριο?"
 
 msgid "Joystick Threshold:"
-msgstr ""
+msgstr "χειριστήριο Κατώφλι:"
 
 msgid "Sets joystick threshold sensitivity"
-msgstr ""
+msgstr "Ορίζει χειριστήριο Κατώφλι Ευαισθησία"
 
 msgid ""
 "Includes or excludes servers with anti-lag support from the server list"
-msgstr ""
+msgstr "Συμπεριλαμβάνει ή αποκλείει Διακομιστές με anti-lag Υποστήριξη από Τη λίστα διακομιστών"
 
 msgid "Allow players to vote for teams to be shuffled by XP"
-msgstr ""
+msgstr "Επιτρέψτε στους παίκτες να ψηφίσουν για ομάδες που πρέπει να ανακατευτούν XP"
 
 msgid "Allow players to vote for teams to be shuffled by XP without a restart"
-msgstr ""
+msgstr "Επιτρέψτε στους παίκτες να ψηφίσουν για ομάδες που πρέπει να ανακατευτούν XP Χωρίς επανεκκίνηση"
 
 msgid "SR Shuffle:"
-msgstr ""
+msgstr "Βαθμολογία Δεξιοτήτων ανάμιξη"
 
 msgid "Allow players to vote for teams to be shuffled by SR"
-msgstr ""
+msgstr "Επιτρέψτε στους παίκτες να ψηφίσουν για ομάδες που πρέπει να ανακατευτούν SR"
 
 msgid "SR Shuffle No Rstrt:"
-msgstr ""
+msgstr "Βαθμολογία Δεξιοτήτων ανάμιξη οχι Επανεκκίνηση:"
 
 msgid "Allow players to vote for teams to be shuffled by SR without a restart"
-msgstr ""
+msgstr "Επιτρέψτε στους παίκτες να ψηφίσουν για ομάδες που πρέπει να ανακατευτούν SR Χωρίς επανεκκίνηση"
 
 msgid "Voice text:"
-msgstr ""
+msgstr "Φωνητικό κείμενο:"
 
 msgid "Show voice text in-game"
-msgstr ""
+msgstr "Εμφάνιση φωνητικού κειμένου στο παιχνίδι"
 
 msgid "Voice chat:"
-msgstr ""
+msgstr "Φωνητική συνομιλία:"
 
 msgid "Play voice chat in-game"
-msgstr ""
+msgstr "Αναπαραγωγή συνομιλίας φωνής στο παιχνίδι"
 
 #: cgame/cg_limbopanel:1907
 msgid "1of%i"
-msgstr ""
+msgstr "1απο%i"
 
 #: cgame/cg_limbopanel:1911 cgame/cg_limbopanel:2553 cgame/cg_limbopanel:2570
 #: cgame/cg_limbopanel:2590
 msgid "%iof%i"
-msgstr ""
+msgstr "%iαπο%i"
 
 msgid "IRC CLIENT"
-msgstr ""
+msgstr "IRC πελάτης"
 
 msgid "Mode:"
-msgstr ""
+msgstr "Τρόπος:"
 
 msgid "Specifies IRC client behavior"
-msgstr ""
+msgstr "Καθορίζει IRC πελάτης η ΣΥΜΠΕΡΙΦΟΡΑ"
 
 msgid "Name of IRC server"
-msgstr ""
+msgstr "Ονομα του  IRC υπηρέτης"
 
 msgid "Channel #:"
-msgstr ""
+msgstr "Κανάλι #:"
 
 msgid "Name of IRC channel - no '#' required"
-msgstr ""
+msgstr "Ονομα του IRC Κανάλι - δεν '#' απαιτείται "
 
 msgid "Port of IRC server"
-msgstr ""
+msgstr "Port του IRC υπηρέτης"
 
 msgid "Nickname:"
-msgstr ""
+msgstr "παρατσούκλι:"
 
 msgid "IRC nickame in channel"
+msgstr "IRC παρατσούκλι στο καναλι"
+
+msgid "Kick rejoin time ms:"
 msgstr ""
 
 msgid "Auto rejoin time after kick"
-msgstr ""
+msgstr "Αυτόματη επανάληψη του χρόνου μετά κλωτσιά"
 
 msgid "Reconnect time ms:"
-msgstr ""
+msgstr "Επανασυνδέστε το χρόνο ms:"
 
 msgid "Reconnect time in ms"
-msgstr ""
+msgstr "Επανασυνδέστε το χρόνο στο ms"
 
 msgid "SR SHUFFLE"
-msgstr ""
+msgstr "Βαθμολογία Δεξιοτήτων ανάμιξη"
 
 msgid "NO SR SHUFFLE"
-msgstr ""
+msgstr "οχι Βαθμολογία Δεξιοτήτων ανάμιξη"
 
 msgid "JOIN A TEAM"
-msgstr ""
+msgstr "ΣΥΝΕΧΕΤΕ ΜΙΑ ΟΜΑΔΑ"
 
 msgid "SOLDIER"
-msgstr ""
+msgstr "ΣΤΡΑΤΙΩΤΗΣ"
 
 msgid "MEDIC"
-msgstr ""
+msgstr "ιατρός"
 
 msgid "ENGINEER"
-msgstr ""
+msgstr "μηχανικός"
 
 msgid "FIELD OPS"
-msgstr ""
+msgstr "Λειτουργίες πεδίου"
 
 msgid "COVERT OPS"
+msgstr "Κρυφή λειτουργία"
+
+msgid ""
+"Includes or excludes ET:Legacy servers with humans from the server list"
+msgstr ""
+
+msgid "Specify receiver of quick radio messages"
+msgstr ""
+
+msgid "Renderer:"
+msgstr "Καθιστών"
+
+msgid "High Quality Video:"
+msgstr ""
+
+msgid "Sets high quality video."
+msgstr ""
+
+msgid "Port:"
+msgstr ""
+
+msgid "^1JOIN US"
+msgstr ""
+
+msgid ""
+"ET: Legacy development is a collaborative effort done in an open, "
+"transparent and friendly manner. Anyone is welcome to join our efforts!"
+msgstr ""
+
+msgid "CHOOSE CLASS/WEAPON"
+msgstr ""
+
+msgid "S. Soldier"
+msgstr ""
+
+msgid "M. Medic"
+msgstr ""
+
+msgid "E. Engineer"
+msgstr ""
+
+msgid "F. Field Ops"
+msgstr ""
+
+msgid "C. Covert Ops"
+msgstr ""
+
+msgid "A. Automatic Rifle"
+msgstr ""
+
+msgid "G. Machinegun"
+msgstr ""
+
+msgid "F. Flamethrower"
+msgstr ""
+
+msgid "R. Rocket Launcher"
+msgstr ""
+
+msgid "M. Mortar"
+msgstr ""
+
+msgid "S. SMG"
+msgstr ""
+
+msgid "G. Rifle"
+msgstr ""
+
+msgid "P. Sniper Rifle"
+msgstr ""
+
+msgid "1. Soldier"
+msgstr ""
+
+msgid "2. Medic"
+msgstr ""
+
+msgid "3. Engineer"
+msgstr ""
+
+msgid "4. Field Ops"
+msgstr ""
+
+msgid "5. Covert Ops"
+msgstr ""
+
+msgid "1. Automatic Rifle"
+msgstr ""
+
+msgid "2. Machinegun"
+msgstr ""
+
+msgid "3. Flamethrower"
+msgstr ""
+
+msgid "4. Rocket Launcher"
+msgstr ""
+
+msgid "5. Mortar"
+msgstr ""
+
+msgid "1. SMG"
+msgstr ""
+
+msgid "2. Rifle"
+msgstr ""
+
+msgid "2. Automatic Rifle"
+msgstr ""
+
+msgid "3. Sniper Rifle"
 msgstr ""
