--- a/etmain/locale/mod/es.po
+++ b/etmain/locale/mod/es.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2017-04-05 15:25+0000\n"
-"Last-Translator: rafal1137 <rafal1137@yahoo.pl>\n"
+"PO-Revision-Date: 2018-09-11 07:56+0000\n"
+"Last-Translator: IR4T4 <gutzu@gmx.ch>\n"
 "Language-Team: Spanish (http://www.transifex.com/etlegacy/etlegacy/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1261,13 +1261,17 @@ msgstr "MENU"
 msgid "VOTE"
 msgstr "VOTAR"
 
-#: etmain/ui/ingame_main.menu:39 etmain/ui/ingame_vote.menu:53
+#: etmain/ui/ingame_main.menu:38 etmain/ui/ingame_vote.menu:53
 msgid "REFEREE"
 msgstr "ÁRBITRO"
 
-#: etmain/ui/ingame_main.menu:40 etmain/ui/ingame_vote.menu:71
+#: etmain/ui/ingame_main.menu:39 etmain/ui/ingame_vote.menu:71
 msgid "RCON"
 msgstr "RCON"
+
+#: etmain/ui/ingame_main.menu:40
+msgid "LIMBO MENU"
+msgstr ""
 
 #: etmain/ui/ingame_main.menu:41 etmain/ui/ingame_serverinfo.menu:52
 #: etmain/ui/playonline.menu:650 etmain/ui/playonline_serverinfo.menu:52
@@ -4587,7 +4591,7 @@ msgstr "SEG. PARA EL SIGUIENTE MAPA"
 
 #: src/cgame/cg_debriefing.c:2905
 msgid "SEC TO NEXT MAP"
-msgstr ""
+msgstr "SEG PARA EL SIGUIENTE MAPA"
 
 #: src/cgame/cg_debriefing.c:3371
 #, c-format
@@ -5591,7 +5595,7 @@ msgid "You must be a player or following a player to use +stats\n"
 msgstr "Tienes que ser un jugador o seguir a un jugador para usar +stats\n"
 
 msgid "You must be alive to use ^3/kill^7."
-msgstr ""
+msgstr "Para usar ^3/kill^7 tienes que estar vivo."
 
 msgid "No vote in progress.\n"
 msgstr "Ninguna votación en curso.\n"
@@ -5884,7 +5888,7 @@ msgid "Arming landmine..."
 msgstr "Activando mina..."
 
 msgid "Landmine armed"
-msgstr ""
+msgstr "Mina activada"
 
 msgid "Dynamite is set, but NOT armed!"
 msgstr "La dinamita está colocada, pero NO activada!"
@@ -5896,10 +5900,10 @@ msgid "Dynamite is now armed with a 30 second timer!"
 msgstr "La dinamita está ahora activada con un temporizador a 30 seg.!"
 
 msgid "Defusing landmine..."
-msgstr ""
+msgstr "Desactivando mina"
 
 msgid "Landmine defused"
-msgstr ""
+msgstr "Mina desactivada"
 
 msgid "Defusing dynamite..."
 msgstr "Desactivando dinamita..."
@@ -6010,7 +6014,7 @@ msgid "Public Settings Loaded!\n"
 msgstr "¡Ajustes públicos cargados!\n"
 
 msgid "Landmine cannot be armed here"
-msgstr ""
+msgstr "Aquí no se pueden colocar minas."
 
 msgid "Your team has too many landmines placed..."
 msgstr "Tu equipo ha puesto demasiadas minas..."
@@ -6274,7 +6278,7 @@ msgid "Type ^3\\stats <player_id>^7 to see stats on an active player.\n"
 msgstr ""
 
 msgid "Spectators can't ready a team!\n"
-msgstr ""
+msgstr "¡Los espectadores no pueden votar como listo!\n\n"
 
 msgid "The ^4Allies^7 team is ready!\n"
 msgstr "¡El equipo ^4Aliado^7 está listo!\n"
@@ -6307,7 +6311,7 @@ msgid "voting has been disabled"
 msgstr "las votaciones han sido desactivadas"
 
 msgid "Not allowed to call a vote as a spectator."
-msgstr ""
+msgstr "No está permitido abrir votaciones como espectador."
 
 msgid "called a vote."
 msgstr "lanzó una votación."
@@ -6421,10 +6425,10 @@ msgid "^4Allies^7 team spectating is now disabled.\n"
 msgstr ""
 
 msgid "Sorry, the ^4Allies^7 team is locked from spectators.\n"
-msgstr ""
+msgstr "Lo sentimos, el equipo ^4Aliado^7 está bloqueado para los espectadores.\n\n"
 
 msgid "Sorry, the ^1Axis^7 team is locked from spectators.\n"
-msgstr ""
+msgstr "Lo sentimos, el equipo ^1Eje^7 está bloqueado para los espectadores.\n\n\n"
 
 msgid "Server quit\n"
 msgstr "Servidor cerrado.\n"
@@ -6463,7 +6467,7 @@ msgid "Try to beat the clock!"
 msgstr "¡Intenta superar el tiempo!"
 
 msgid "You have been been stripped of fireteam admin rights"
-msgstr ""
+msgstr "Te han quitado los derechos de administrador de la escuadra."
 
 msgid "%s ^7has left the fireteam\n"
 msgstr "%s ^7ha abandonado la escuadra\n\n"
@@ -6481,7 +6485,7 @@ msgid "was stabbed by"
 msgstr "fue apuñalado por"
 
 msgid "was backstabbed by"
-msgstr ""
+msgstr "fue apuñalado por detrás por"
 
 msgid "was blasted by"
 msgstr "fue explotado por"
@@ -6511,7 +6515,7 @@ msgid "'s artillery support"
 msgstr "y su soporte de artillería"
 
 msgid "^2swapped places with^7"
-msgstr ""
+msgstr "^2se cambió de puesto con^7"
 
 msgid "failed to spot"
 msgstr "se equivocó al activar la mina de"
@@ -6529,7 +6533,7 @@ msgid "stood on"
 msgstr "permaneció en"
 
 msgid "'s airstrike marker"
-msgstr ""
+msgstr " y su señal de ataque aéreo."
 
 msgid "- Small Health"
 msgstr "- Botiquín Pequeño"
@@ -6860,19 +6864,19 @@ msgid "Welcome Newbie! Award"
 msgstr "Premio ¡Bienvenido Novato!"
 
 msgid "Highest Headshots Percentage"
-msgstr ""
+msgstr "Porcentaje de Tiros en la Cabeza más Alto"
 
 msgid "Best Survivor"
-msgstr ""
+msgstr "Mejor Superviviente"
 
 msgid "Most Gibs"
-msgstr ""
+msgstr "Mejor despedazador"
 
 msgid "Most Selfkills"
-msgstr ""
+msgstr "Mejor Suicida"
 
 msgid "Most Deaths"
-msgstr ""
+msgstr "El Mayor Número de Muertes"
 
 msgid ""
 "\n"
@@ -6901,7 +6905,7 @@ msgid "Die command not allowed during intermission.\n"
 msgstr "El comando \"die\" no está permitido en el descanso.\n"
 
 msgid "^3%d^7 players died."
-msgstr ""
+msgstr "Murieron ^3%d^7 jugadores."
 
 msgid "There is no player to die.\n"
 msgstr "No hay jugadores para matar.\n"
@@ -6919,7 +6923,7 @@ msgid "Freeze command not allowed during intermission.\n"
 msgstr "El comando \"freeze\" no está permitido en el descanso.\n"
 
 msgid "^3%d^7 players are frozen."
-msgstr ""
+msgstr "Están congelados ^3%d^7 jugadores."
 
 msgid "No players in team or they are already frozen.\n"
 msgstr "No hay jugadores en el equipo o ya están congelados.\n"
@@ -6934,7 +6938,7 @@ msgid "^7%s^7 is frozen."
 msgstr "^7%s^7 está congelado."
 
 msgid "^3%d^7 players are unfrozen."
-msgstr ""
+msgstr "Están descongelados ^3%d^7 jugadores."
 
 msgid "No players in team or they are already unfrozen.\n"
 msgstr "No hay jugadores en el equipo o ya están descongelados.\n"
@@ -6952,13 +6956,13 @@ msgid "Burn command not allowed during intermission.\n"
 msgstr "El comando \"burn no está permitido en el descanso.\n"
 
 msgid "^3%d^7 players burned."
-msgstr ""
+msgstr "Se queman ^3%d^7 jugadores."
 
 msgid "No players in team or they are already burned.\n"
-msgstr ""
+msgstr "No hay jugadores en el equipo, o ya están quemándose.\n"
 
 msgid "Error - can't burn - %s.\n"
-msgstr ""
+msgstr "Error - no se puede quemar - %s.\n"
 
 msgid "Player must be on a team to be burned.\n"
 msgstr ""
@@ -6988,7 +6992,7 @@ msgid "%s command not allowed during intermission.\n"
 msgstr "El comando %s no está permitido en el descanso.\n"
 
 msgid "^3%d^7 players %s."
-msgstr ""
+msgstr "^3%d^7 jugadores %s."
 
 msgid "No players in team or they are already %s.\n"
 msgstr "No hay jugadores en el equipo o ya han sido %s.\n"
@@ -7030,16 +7034,16 @@ msgid "MATCH BEGINS NOW!"
 msgstr "¡LA PARTIDA EMPIEZA AHORA!"
 
 msgid "Mute Players:"
-msgstr ""
+msgstr "Silenciar Jugadores:"
 
 msgid "Allow players to vote for muting players"
-msgstr ""
+msgstr "Permitir que los jugadores voten para silenciar otros jugadores"
 
 msgid "Surrender:"
-msgstr ""
+msgstr "Rendirse"
 
 msgid "Allow players to vote for surrender"
-msgstr ""
+msgstr "Permitir que los jugadores voten para rendirse."
 
 msgid "XP Shuffle No Rstrt:"
 msgstr ""
@@ -7048,40 +7052,40 @@ msgid "Allow players to vote for teams to be shuffled without a restart"
 msgstr ""
 
 msgid "Restart Campaign:"
-msgstr ""
+msgstr "Reiniciar Campaña:"
 
 msgid "Allow players to vote for restarting campaign"
-msgstr ""
+msgstr "Permitir que los jugadores voten para reiniciar la campaña"
 
 msgid "Next Campaign:"
-msgstr ""
+msgstr "Siguiente Campaña"
 
 msgid "Allow players to vote for next campaign"
-msgstr ""
+msgstr "Permitir que los usuarios voten por la siguiente campaña"
 
 msgid "CHANGE SYSTEM SETTINGS"
-msgstr ""
+msgstr "CAMBIAR AJUSTES DEL SISTEMA"
 
 msgid "RESTART CAMPAIGN"
-msgstr ""
+msgstr "REINICIAR CAMPAÑA"
 
 msgid "SURRENDER"
-msgstr ""
+msgstr "RENDIRSE"
 
 msgid "NO XP SHUFFLE"
 msgstr ""
 
 msgid "Multiview:"
-msgstr ""
+msgstr "Multivista:"
 
 msgid "Poll:"
-msgstr ""
+msgstr "Votación:"
 
 msgid "Allow players to vote for custom votes"
-msgstr ""
+msgstr "Permitir que los jugadores creen votaciones"
 
 msgid "Log File:"
-msgstr ""
+msgstr "Archivo de Log:"
 
 msgid "Sets the name of the log file or if empty logging is disabled"
 msgstr ""
@@ -7093,7 +7097,7 @@ msgid "^7BACKSPACE ^mgo  back"
 msgstr ""
 
 msgid "CURRENT PROFILE"
-msgstr ""
+msgstr "PERFIL ACTUAL"
 
 #: src/cgame/cg_draw.c:1504
 msgid "%s^7's dynamite"
@@ -7107,26 +7111,26 @@ msgid "You are frozen - ^3/kill^7 is disabled."
 msgstr ""
 
 msgid "Renderer:"
-msgstr ""
+msgstr "Renderizador:"
 
 msgid "Set your desired renderer (does a video restart)"
-msgstr ""
+msgstr "Ajusta tu renderizador deseado (reinicia el juego)"
 
 msgid "Custom Width:"
-msgstr ""
+msgstr "Ancho Personalizado:"
 
 msgid ""
 "Specifies custom resolution width - requires custom resolution set. *Use on "
 "your own risk!"
-msgstr ""
+msgstr "Especifica el ancho de la resolución. Necesita que se active la resolución personalizada. *¡Usa bajo tu propio riesgo!"
 
 msgid "Custom Height:"
-msgstr ""
+msgstr "Altura Personalizada:"
 
 msgid ""
 "Specifies custom resolution height - requires custom resolution set .*Use on"
 " your own risk!"
-msgstr ""
+msgstr "Especifica la altura de la resolución. Necesita que se active la resolución personalizada. *¡Usa bajo tu propio riesgo!"
 
 msgid "Max. Frames Per Second:"
 msgstr ""
@@ -7232,6 +7236,9 @@ msgstr ""
 msgid "IRC nickame in channel"
 msgstr ""
 
+msgid "Kick rejoin time ms:"
+msgstr ""
+
 msgid "Auto rejoin time after kick"
 msgstr ""
 
@@ -7263,4 +7270,115 @@ msgid "FIELD OPS"
 msgstr ""
 
 msgid "COVERT OPS"
+msgstr ""
+
+msgid ""
+"Includes or excludes ET:Legacy servers with humans from the server list"
+msgstr ""
+
+msgid "Specify receiver of quick radio messages"
+msgstr ""
+
+msgid "Renderer:"
+msgstr "Renderizador:"
+
+msgid "High Quality Video:"
+msgstr ""
+
+msgid "Sets high quality video."
+msgstr ""
+
+msgid "Port:"
+msgstr ""
+
+msgid "^1JOIN US"
+msgstr ""
+
+msgid ""
+"ET: Legacy development is a collaborative effort done in an open, "
+"transparent and friendly manner. Anyone is welcome to join our efforts!"
+msgstr ""
+
+msgid "CHOOSE CLASS/WEAPON"
+msgstr ""
+
+msgid "S. Soldier"
+msgstr ""
+
+msgid "M. Medic"
+msgstr ""
+
+msgid "E. Engineer"
+msgstr ""
+
+msgid "F. Field Ops"
+msgstr ""
+
+msgid "C. Covert Ops"
+msgstr ""
+
+msgid "A. Automatic Rifle"
+msgstr ""
+
+msgid "G. Machinegun"
+msgstr ""
+
+msgid "F. Flamethrower"
+msgstr ""
+
+msgid "R. Rocket Launcher"
+msgstr ""
+
+msgid "M. Mortar"
+msgstr ""
+
+msgid "S. SMG"
+msgstr ""
+
+msgid "G. Rifle"
+msgstr ""
+
+msgid "P. Sniper Rifle"
+msgstr ""
+
+msgid "1. Soldier"
+msgstr ""
+
+msgid "2. Medic"
+msgstr ""
+
+msgid "3. Engineer"
+msgstr ""
+
+msgid "4. Field Ops"
+msgstr ""
+
+msgid "5. Covert Ops"
+msgstr ""
+
+msgid "1. Automatic Rifle"
+msgstr ""
+
+msgid "2. Machinegun"
+msgstr ""
+
+msgid "3. Flamethrower"
+msgstr ""
+
+msgid "4. Rocket Launcher"
+msgstr ""
+
+msgid "5. Mortar"
+msgstr ""
+
+msgid "1. SMG"
+msgstr ""
+
+msgid "2. Rifle"
+msgstr ""
+
+msgid "2. Automatic Rifle"
+msgstr ""
+
+msgid "3. Sniper Rifle"
 msgstr ""
