--- a/etmain/locale/mod/pl.po
+++ b/etmain/locale/mod/pl.po
@@ -2,16 +2,16 @@
 # Copyright (C) 2012-2015 ET: Legacy Team
 # This file is distributed under the same license as the ET:Legacy package.
 # Translators:
-# jakub.strelcow <jakubstrelcow@gmail.com>, 2015
-# rafal1137 <rafal1137@yahoo.pl>, 2016
+# Jakub Strelcow <jakubstrelcow@gmail.com>, 2015
+# rafal1137 <rafal1137@yahoo.pl>, 2016,2018
 # rafal1137 <rafal1137@yahoo.pl>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2017-04-05 15:25+0000\n"
-"Last-Translator: rafal1137 <rafal1137@yahoo.pl>\n"
+"PO-Revision-Date: 2018-02-24 15:08+0000\n"
+"Last-Translator: Artem Vorotnikov <artem@vorotnikov.me>\n"
 "Language-Team: Polish (http://www.transifex.com/etlegacy/etlegacy/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1263,13 +1263,17 @@ msgstr "MENU"
 msgid "VOTE"
 msgstr "GŁOSOWANIE"
 
-#: etmain/ui/ingame_main.menu:39 etmain/ui/ingame_vote.menu:53
+#: etmain/ui/ingame_main.menu:38 etmain/ui/ingame_vote.menu:53
 msgid "REFEREE"
 msgstr "SĘDZIA"
 
-#: etmain/ui/ingame_main.menu:40 etmain/ui/ingame_vote.menu:71
+#: etmain/ui/ingame_main.menu:39 etmain/ui/ingame_vote.menu:71
 msgid "RCON"
 msgstr "RCON"
+
+#: etmain/ui/ingame_main.menu:40
+msgid "LIMBO MENU"
+msgstr ""
 
 #: etmain/ui/ingame_main.menu:41 etmain/ui/ingame_serverinfo.menu:52
 #: etmain/ui/playonline.menu:650 etmain/ui/playonline_serverinfo.menu:52
@@ -3633,7 +3637,7 @@ msgstr "Filtr wpływa na serwery z nazwą mapy"
 #: etmain/ui/playonline.menu:158 etmain/ui/playonline.menu:169
 #: etmain/ui/playonline.menu:180 etmain/ui/playonline.menu:191
 msgid "Filter Disabled"
-msgstr "Filtr Wyłączont"
+msgstr "Filtr Wyłączony"
 
 #: etmain/ui/playonline.menu:114 etmain/ui/playonline.menu:125
 #: etmain/ui/playonline.menu:136 etmain/ui/playonline.menu:147
@@ -7166,37 +7170,37 @@ msgstr "Ustawia próg częstotliwości joysticka"
 
 msgid ""
 "Includes or excludes servers with anti-lag support from the server list"
-msgstr ""
+msgstr "Zawiera lub wyklucza serwery z wsparciem anty-laga z listy serwerów"
 
 msgid "Allow players to vote for teams to be shuffled by XP"
-msgstr ""
+msgstr "Pozwól graczom aby głosowali za wymieszanie zespołów poprzez wielkość XP"
 
 msgid "Allow players to vote for teams to be shuffled by XP without a restart"
-msgstr ""
+msgstr "Pozwól graczom aby głosowali na wymieszanie zespołów poprzez wielkość XP bez resetu"
 
 msgid "SR Shuffle:"
-msgstr ""
+msgstr "Pomieszanie SR:"
 
 msgid "Allow players to vote for teams to be shuffled by SR"
-msgstr ""
+msgstr "Pozwól graczom aby głosowali za wymieszanie zespołów poprzez wielkość SR"
 
 msgid "SR Shuffle No Rstrt:"
-msgstr ""
+msgstr "Pomieszanie SR Bez Restartu:"
 
 msgid "Allow players to vote for teams to be shuffled by SR without a restart"
-msgstr ""
+msgstr "Pozwól graczom aby głosowali za wymieszanie zespołów poprzez wielkość SR bez resetu"
 
 msgid "Voice text:"
-msgstr ""
+msgstr "Tekst Głosów:"
 
 msgid "Show voice text in-game"
-msgstr ""
+msgstr "Pokaż tekst głosów w grze"
 
 msgid "Voice chat:"
-msgstr ""
+msgstr "Głos Czatu:"
 
 msgid "Play voice chat in-game"
-msgstr ""
+msgstr "Graj głos czatu w grze"
 
 #: cgame/cg_limbopanel:1907
 msgid "1of%i"
@@ -7208,61 +7212,175 @@ msgid "%iof%i"
 msgstr ""
 
 msgid "IRC CLIENT"
-msgstr ""
+msgstr "KLIENT IRC"
 
 msgid "Mode:"
-msgstr ""
+msgstr "Tryb:"
 
 msgid "Specifies IRC client behavior"
-msgstr ""
+msgstr "Sprecyzuj zachowanie klienta IRC"
 
 msgid "Name of IRC server"
-msgstr ""
+msgstr "Nazwa serwera IRC"
 
 msgid "Channel #:"
-msgstr ""
+msgstr "Kanał #:"
 
 msgid "Name of IRC channel - no '#' required"
-msgstr ""
+msgstr "Nazwa kanału IRC - '#' nie jest wymagany"
 
 msgid "Port of IRC server"
-msgstr ""
+msgstr "Port serwera IRC"
 
 msgid "Nickname:"
-msgstr ""
+msgstr "Ksywka:"
 
 msgid "IRC nickame in channel"
-msgstr ""
+msgstr "Ksywka w kanale IRC"
+
+msgid "Kick rejoin time ms:"
+msgstr "Ponownie połączenie po wywaleniu w ms:"
 
 msgid "Auto rejoin time after kick"
-msgstr ""
+msgstr "Automatyczne ponowne połączenie po wywaleniu"
 
 msgid "Reconnect time ms:"
-msgstr ""
+msgstr "Ponowne połączenie w ms:"
 
 msgid "Reconnect time in ms"
-msgstr ""
+msgstr "Ponowne połączenie w milisekundach"
 
 msgid "SR SHUFFLE"
-msgstr ""
+msgstr "POMIESZANIE SR"
 
 msgid "NO SR SHUFFLE"
-msgstr ""
+msgstr "POMIESZANIE SR BEZ RESETU"
 
 msgid "JOIN A TEAM"
-msgstr ""
+msgstr "DOŁĄCZ DO ZESPOŁU"
 
 msgid "SOLDIER"
-msgstr ""
+msgstr "ŻOŁNIERZ"
 
 msgid "MEDIC"
-msgstr ""
+msgstr "MEDYK"
 
 msgid "ENGINEER"
-msgstr ""
+msgstr "INŻYNIER"
 
 msgid "FIELD OPS"
-msgstr ""
+msgstr "WSPARCIE"
 
 msgid "COVERT OPS"
-msgstr ""
+msgstr "ZABÓJCA"
+
+msgid ""
+"Includes or excludes ET:Legacy servers with humans from the server list"
+msgstr "Zawiera lub wyklucza serwery ET:Legacy z ludzmi z listy serwerów "
+
+msgid "Specify receiver of quick radio messages"
+msgstr "Sprecyzuj dokąd mają być przesyłane szybkie wiadomości"
+
+msgid "Renderer:"
+msgstr "Renderer:"
+
+msgid "High Quality Video:"
+msgstr "Wideo Wysokiej Jakości:"
+
+msgid "Sets high quality video."
+msgstr "Ustawia wysoką jakość wideo."
+
+msgid "Port:"
+msgstr "Port:"
+
+msgid "^1JOIN US"
+msgstr "^1DOŁĄCZ DO NAS"
+
+msgid ""
+"ET: Legacy development is a collaborative effort done in an open, "
+"transparent and friendly manner. Anyone is welcome to join our efforts!"
+msgstr " Rozwój ET: Legacy jest wspólnym wysiłkiem podjętym w sposób otwarty, przejrzysty i przyjazny. Każdy jest mile widziany do przyłączenia się do naszych wysiłków!"
+
+msgid "CHOOSE CLASS/WEAPON"
+msgstr "WYBIERZ KLASĘ/BROŃ"
+
+msgid "S. Soldier"
+msgstr "S. Żołnierz"
+
+msgid "M. Medic"
+msgstr "M. Medyk"
+
+msgid "E. Engineer"
+msgstr "E. Inżynier"
+
+msgid "F. Field Ops"
+msgstr "F. Wsparcie"
+
+msgid "C. Covert Ops"
+msgstr "C. Zabójca"
+
+msgid "A. Automatic Rifle"
+msgstr "A. Karabin Maszynowy"
+
+msgid "G. Machinegun"
+msgstr "G. Ciężki Karabin Maszynowy"
+
+msgid "F. Flamethrower"
+msgstr "F. Miotacz Ognia"
+
+msgid "R. Rocket Launcher"
+msgstr "R. Wyrzutnia Rakiet"
+
+msgid "M. Mortar"
+msgstr "M. Moździerz"
+
+msgid "S. SMG"
+msgstr "S. Pistolet Maszynowy"
+
+msgid "G. Rifle"
+msgstr "G. Karabin"
+
+msgid "P. Sniper Rifle"
+msgstr "P. Karabin Snajperski"
+
+msgid "1. Soldier"
+msgstr "1. Żołnierz"
+
+msgid "2. Medic"
+msgstr "2. Medyk"
+
+msgid "3. Engineer"
+msgstr "3. Inżynier"
+
+msgid "4. Field Ops"
+msgstr "4. Wsparcie"
+
+msgid "5. Covert Ops"
+msgstr "5. Zabójca"
+
+msgid "1. Automatic Rifle"
+msgstr "1. Karabin Maszynowy"
+
+msgid "2. Machinegun"
+msgstr "2. Ciężki Karabin Maszynowy"
+
+msgid "3. Flamethrower"
+msgstr "3. Miotacz Ognia"
+
+msgid "4. Rocket Launcher"
+msgstr "4. Wyrzutnia Rakiet"
+
+msgid "5. Mortar"
+msgstr "5. Moździerz"
+
+msgid "1. SMG"
+msgstr "1. Pistolet Maszynowy"
+
+msgid "2. Rifle"
+msgstr "2. Karabin"
+
+msgid "2. Automatic Rifle"
+msgstr "2. Karabin Maszynowy"
+
+msgid "3. Sniper Rifle"
+msgstr "3. Karabin Snajperski"
