--- a/etmain/locale/mod/hu.po
+++ b/etmain/locale/mod/hu.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: ET:Legacy\n"
 "Report-Msgid-Bugs-To: mail@etlegacy.com\n"
 "POT-Creation-Date: 2015-01-10 20:22+0100\n"
-"PO-Revision-Date: 2018-09-11 08:12+0000\n"
-"Last-Translator: IR4T4 <gutzu@gmx.ch>\n"
+"PO-Revision-Date: 2018-11-30 14:41+0000\n"
+"Last-Translator: Artem Vorotnikov <artem@vorotnikov.me>\n"
 "Language-Team: Hungarian (http://www.transifex.com/etlegacy/etlegacy/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -257,8 +257,8 @@ msgid "^1WEBSITE"
 msgstr "^1HONLAP"
 
 #: etmain/ui/credits_etlegacy.menu:193 etmain/ui/credits_quit.menu:260
-msgid "© 2012-2015 ET Legacy Team - under the terms of GPL version 3."
-msgstr "© 2012-2015 ET Legacy Team - a GPL 3 feltételei alatt."
+msgid "© 2012-2018 ET:Legacy Team - under the terms of GPL version 3."
+msgstr "© 2012-2018 ET:Legacy Team - a GPL v3.0 felhasználási feltételeivel védve"
 
 #: etmain/ui/credits_etlegacy.menu:201
 msgid "HALL OF FAME"
@@ -7279,9 +7279,6 @@ msgstr "Beteszi vagy kiveszi azokat az ET:Legacy szervereket, amiken emberek is 
 msgid "Specify receiver of quick radio messages"
 msgstr "Gyors rádióüzenet vevőjének meghatározása"
 
-msgid "Renderer:"
-msgstr "Renderer:"
-
 msgid "High Quality Video:"
 msgstr "Magas minőségű videó:"
 
@@ -7382,3 +7379,123 @@ msgstr "2. Automata karabély"
 
 msgid "3. Sniper Rifle"
 msgstr "3. Mesterlövész puska"
+
+msgid "English (default)  "
+msgstr "Angol (alap)"
+
+msgid "Czech"
+msgstr "Cseh"
+
+msgid "Dutch"
+msgstr "Holland"
+
+msgid "Finnish"
+msgstr "Finn"
+
+msgid "French"
+msgstr "Francia"
+
+msgid "German"
+msgstr "Német"
+
+msgid "Greek"
+msgstr "Görög"
+
+msgid "Hungarian"
+msgstr "Magyar"
+
+msgid "Italian"
+msgstr "Olasz"
+
+msgid "Norwegian"
+msgstr "Norvég"
+
+msgid "Polish"
+msgstr "Lengyel"
+
+msgid "Portuguese"
+msgstr "Portugál"
+
+msgid "Russian"
+msgstr "Orosz"
+
+msgid "Spanish"
+msgstr "Spanyol"
+
+msgid "Turkish"
+msgstr "Török"
+
+msgid "Bulgarian"
+msgstr ""
+
+msgid "Serbian"
+msgstr ""
+
+msgid "Swedish"
+msgstr ""
+
+msgid "desktop resolution"
+msgstr "asztal felbontása"
+
+msgid "custom resolution"
+msgstr "egyedi felbontás"
+
+msgid "856*480 Wide Screen"
+msgstr "856*480 szélesvásznú"
+
+msgid "Windowed"
+msgstr "Ablakos"
+
+msgid "Fullscreen"
+msgstr "Teljes képernyős"
+
+msgid "Windowed Fullscreen"
+msgstr "Teljes képernyő ablakban"
+
+msgid "Original"
+msgstr "Eredeti"
+
+msgid "Other"
+msgstr "Más"
+
+msgid "Show Speed:"
+msgstr "Sebesség mutatása:"
+
+msgid "UPS + highest speed"
+msgstr "UPS + legnagyobb sebesség"
+
+msgid "KPH + highest speed"
+msgstr "KPH + legnagyobb sebesség"
+
+msgid "MPH + highest speed"
+msgstr "MPH + legnagyobb sebesség"
+
+msgid "Displays speed of player"
+msgstr "Kijelzi a játékos sebességét"
+
+msgid "Vanilla (default)  "
+msgstr "Vanilla (alap)  "
+
+msgid "Direct connect"
+msgstr "Közvetlen kapcsolat"
+
+msgid "Override nickname"
+msgstr "Becenév felülírása"
+
+msgid "Mute channel"
+msgstr "Csatorna némítása"
+
+msgid "Direct + Override"
+msgstr "Közvetlen + felülírás"
+
+msgid "Direct + Mute"
+msgstr "Közvetlen + némítás"
+
+msgid "Override + Mute"
+msgstr "Felülírás + némítás"
+
+msgid "Direct + Over. + Mute"
+msgstr "Közvetlen + felülírás + némítás"
+
+msgid "Custom"
+msgstr ""
